Fix back visibility layout

--- a/_sass/layout/card.scss
+++ b/_sass/layout/card.scss
@@ -101,6 +101,7 @@ img {
 }
 
 .hide-back {
+  overflow: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
